user can connect

--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
   <p> This is working </p>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+  </script>
 </body>
 </html>
